--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 <body>
     <div class="container">
         <h1>📊 診療報酬データベース</h1>
-        <p class="subtitle">Shinryouhoshu Database Mirror - AI LL M対応構造化DB</p>
+        <p class="subtitle">Shinryouhoshu Database Mirror - AI LLM対応構造化DB</p>
 
         <div class="info-box">
             <strong>📍 このサイトについて</strong><br>
@@ -104,34 +104,34 @@
             <div class="db-card">
                 <h3>🏥 診療報酬改定資料</h3>
                 <p>令和8年度の改定通知・施設基準・疑義解釈など</p>
-                <a href="./ai-shinryou-db/">→ 詳細を表示</a>
+                <a href="./output/ai-shinryou-db/">→ 詳細を表示</a>
             </div>
 
             <div class="db-card">
                 <h3>💰 点数表マスター</h3>
                 <p>診療報酬点数表（医科・歯科・調剤）</p>
-                <a href="./ai-tensuhyo-db/">→ 詳細を表示</a>
+                <a href="./output/ai-tensuhyo-db/">→ 詳細を表示</a>
             </div>
 
             <div class="db-card">
                 <h3>⚖️ 関連法令</h3>
                 <p>健康保険法・医療法・医師法など</p>
-                <a href="./ai-hourei-db/">→ 詳細を表示</a>
+                <a href="./output/ai-hourei-db/">→ 詳細を表示</a>
             </div>
 
             <div class="db-card">
                 <h3>📋 中医協資料</h3>
                 <p>中央社会保険医療協議会の答申・議事録</p>
-                <a href="./ai-chiikyou-db/">→ 詳細を表示</a>
+                <a href="./output/ai-chiikyou-db/">→ 詳細を表示</a>
             </div>
         </div>
 
         <h2>🔗 AI からの参照方法</h2>
         <div class="info-box">
             <strong>ChatGPT/Claude/Gemini で以下 URL にアクセス可能：</strong><br><br>
-            <code>https://yuki0717-hub.github.io/shinryouhoshu-db-mirror/ai-shinryou-db/</code><br>
-            <code>https://yuki0717-hub.github.io/shinryouhoshu-db-mirror/ai-hourei-db/</code><br>
-            <code>https://yuki0717-hub.github.io/shinryouhoshu-db-mirror/ai-chiikyou-db/</code>
+            <code style="background:#f5f5f5;padding:5px;">https://yuki0717-hub.github.io/shinryouhoshu-download-tool/output/ai-shinryou-db/</code><br><br>
+            <code style="background:#f5f5f5;padding:5px;">https://yuki0717-hub.github.io/shinryouhoshu-download-tool/output/ai-hourei-db/</code><br><br>
+            <code style="background:#f5f5f5;padding:5px;">https://yuki0717-hub.github.io/shinryouhoshu-download-tool/output/ai-chiikyou-db/</code>
         </div>
 
         <h2>📖 使用ガイド</h2>
@@ -146,7 +146,7 @@
     </div>
 
     <script>
-        // 最終更新日を動的に取得（オプション）
+        // 最終更新日を動的に取得
         document.getElementById('lastUpdate').textContent = new Date().toISOString().split('T')[0];
     </script>
 </body>
