--- a/output/ai-shinryou-db/index.html
+++ b/output/ai-shinryou-db/index.html
@@ -10,44 +10,99 @@
         .header { background: linear-gradient(135deg, #1a1a3e, #2d1b69); padding: 30px 20px; text-align: center; border-bottom: 2px solid #6c63ff; }
         .header h1 { font-size: 1.8em; color: #fff; margin-bottom: 8px; }
         .header p { color: #a0a0cc; font-size: 0.95em; }
-        .back-link { display: inline-block; margin: 20px; padding: 10px 20px; background: #2d2d5e; color: #8b8bff; text-decoration: none; border-radius: 8px; transition: background 0.3s; }
+        .back-link { display: inline-block; margin: 20px; padding: 10px 20px; background: #2d2d5e; color: #8b8bff; text-decoration: none; border-radius: 8px; }
         .back-link:hover { background: #3d3d7e; }
         .container { max-width: 1000px; margin: 0 auto; padding: 20px; }
         .card { background: #12122a; border: 1px solid #2a2a5a; border-radius: 12px; padding: 24px; margin-bottom: 20px; }
         .card h2 { color: #6c63ff; font-size: 1.3em; margin-bottom: 12px; border-bottom: 1px solid #2a2a5a; padding-bottom: 8px; }
         .card p { line-height: 1.8; color: #b0b0d0; }
         .file-list { list-style: none; padding: 0; }
-        .file-list li { padding: 12px 16px; margin: 8px 0; background: #1a1a3e; border-radius: 8px; border-left: 3px solid #6c63ff; }
-        .file-list li a { color: #8b8bff; text-decoration: none; }
-        .file-list li a:hover { color: #fff; }
+        .file-list li { padding: 14px 16px; margin: 8px 0; background: #1a1a3e; border-radius: 8px; border-left: 3px solid #6c63ff; }
+        .file-list li a { color: #8b8bff; text-decoration: none; font-weight: bold; }
+        .file-list li a:hover { color: #fff; text-decoration: underline; }
+        .file-list li .desc { display: block; color: #888; font-size: 0.85em; margin-top: 4px; }
         .status-badge { display: inline-block; padding: 4px 12px; background: #1b3a1b; color: #4caf50; border-radius: 12px; font-size: 0.85em; margin-top: 8px; }
         .info-box { background: #1a1a3e; border: 1px solid #3a3a6a; border-radius: 8px; padding: 16px; margin: 16px 0; }
-        .info-box code { background: #2a2a5a; padding: 2px 8px; border-radius: 4px; color: #8b8bff; font-size: 0.9em; }
+        .info-box code { background: #2a2a5a; padding: 2px 8px; border-radius: 4px; color: #8b8bff; font-size: 0.9em; word-break: break-all; }
+        .source-note { background: #1a1a2e; border: 1px solid #333366; border-radius: 8px; padding: 16px; margin-top: 16px; font-size: 0.9em; color: #9999bb; }
+        .source-note a { color: #6c63ff; }
         .footer { text-align: center; padding: 30px; color: #666; font-size: 0.85em; border-top: 1px solid #2a2a5a; margin-top: 40px; }
     </style>
 </head>
 <body>
     <div class="header">
-        <h1>🏥 診療報酬改定資料</h1>
-        <p>令和8年度 診療報酬改定に関する通知・施設基準・疑義解釈</p>
+        <h1>🏥 診療報酬改定資料データベース</h1>
+        <p>令和8年度（2026年度）診療報酬改定に関する通知・答申・施設基準・疑義解釈</p>
     </div>
     <a href="https://yuki0717-hub.github.io/shinryouhoshu-download-tool/" class="back-link">← トップページに戻る</a>
     <div class="container">
         <div class="card">
             <h2>📋 データベース概要</h2>
-            <p>厚生労働省が公開する診療報酬改定に関連する資料を自動収集し、AI（LLM）から参照しやすい形式で構造化しています。</p>
-            <span class="status-badge">✅ 毎日自動更新</span>
+            <p>厚生労働省・中医協が公開する令和8年度診療報酬改定に関連する公式資料を収集し、リンク集として提供しています。AI（LLM）からの参照にも対応しています。</p>
+            <span class="status-badge">✅ 稼働中</span>
         </div>
 
         <div class="card">
-            <h2>📁 収録データ</h2>
+            <h2>📁 令和8年度 診療報酬改定 答申資料（2026年2月13日 中医協答申）</h2>
             <ul class="file-list">
-                <li>📄 診療報酬改定に係る通知（令和8年度）</li>
-                <li>📄 施設基準の届出に関する手続き</li>
-                <li>📄 疑義解釈資料（その1〜最新）</li>
-                <li>📄 特掲診療料の施設基準</li>
-                <li>📄 基本診療料の施設基準</li>
-                <li>📄 DPC/PDPS関連資料</li>
+                <li>
+                    <a href="https://www.mhlw.go.jp/content/10808000/001655176.pdf" target="_blank">📄 個別改定項目について（総－1）</a>
+                    <span class="desc">PDF 4.8MB — 全改定項目の詳細（短冊）</span>
+                </li>
+                <li>
+                    <a href="https://www.mhlw.go.jp/content/10808000/001655177.pdf" target="_blank">📄 答申書（総－2）</a>
+                    <span class="desc">PDF 230KB — 中医協から厚生労働大臣への答申</span>
+                </li>
+                <li>
+                    <a href="https://www.mhlw.go.jp/stf/newpage_70414.html" target="_blank">📄 中医協総会（第647回）議事次第</a>
+                    <span class="desc">答申に関する全資料一覧ページ</span>
+                </li>
+            </ul>
+        </div>
+
+        <div class="card">
+            <h2>📁 答申別紙（点数表・施設基準）</h2>
+            <ul class="file-list">
+                <li>
+                    <a href="https://www.mhlw.go.jp/stf/newpage_70414.html" target="_blank">📄 別紙1-1 医科診療報酬点数表</a>
+                    <span class="desc">PDF 8.3MB — 医科点数表の改定内容</span>
+                </li>
+                <li>
+                    <a href="https://www.mhlw.go.jp/stf/newpage_70414.html" target="_blank">📄 別紙1-2 歯科診療報酬点数表</a>
+                    <span class="desc">歯科点数表の改定内容</span>
+                </li>
+                <li>
+                    <a href="https://www.mhlw.go.jp/stf/newpage_70414.html" target="_blank">📄 別紙1-3 調剤報酬点数表</a>
+                    <span class="desc">調剤報酬点数表の改定内容</span>
+                </li>
+            </ul>
+        </div>
+
+        <div class="card">
+            <h2>📁 改定の基本方針・諮問</h2>
+            <ul class="file-list">
+                <li>
+                    <a href="https://www.mhlw.go.jp/content/10808000/001631287.pdf" target="_blank">📄 令和8年度診療報酬改定について（諮問書）</a>
+                    <span class="desc">PDF — 2026年1月14日付 厚生労働省発保0114第1号</span>
+                </li>
+                <li>
+                    <a href="https://www.mhlw.go.jp/stf/newpage_67729.html" target="_blank">📄 令和8年度診療報酬改定について（厚労省総合ページ）</a>
+                    <span class="desc">基本方針・改定率・スケジュール等</span>
+                </li>
+            </ul>
+        </div>
+
+        <div class="card">
+            <h2>📁 議論の整理・パブリックコメント</h2>
+            <ul class="file-list">
+                <li>
+                    <a href="https://www.mhlw.go.jp/content/10808000/001637094.pdf" target="_blank">📄 これまでの議論の整理（公聴会資料）</a>
+                    <span class="desc">PDF — 第643回中医協総会（2026年1月21日）</span>
+                </li>
+                <li>
+                    <a href="https://www.mhlw.go.jp/content/10808000/001646855.pdf" target="_blank">📄 議論の整理に関するパブリックコメント結果</a>
+                    <span class="desc">PDF — 国民からの意見とその対応</span>
+                </li>
             </ul>
         </div>
 
@@ -60,13 +115,13 @@
             </div>
         </div>
 
-        <div class="card">
-            <h2>📊 データ形式</h2>
-            <p>JSON / TXT 形式で提供。GitHub Actions により厚生労働省サイトから毎日自動取得・更新されます。</p>
+        <div class="source-note">
+            <strong>📌 出典：</strong>すべての資料は<a href="https://www.mhlw.go.jp/stf/seisakunitsuite/bunya/0000106602.html" target="_blank">厚生労働省 診療報酬改定ページ</a>および<a href="https://www.mhlw.go.jp/stf/shingi/shingi-chuo_128154.html" target="_blank">中医協総会</a>から引用しています。<br>
+            ※ 告示・通知は2026年3月上旬に公表予定です。公表後に追加されます。
         </div>
     </div>
     <div class="footer">
-        <p>© 2026 診療報酬データベース | GitHub Pages で自動配信</p>
+        <p>© 2026 診療報酬データベース | 最終確認: 2026-02-22</p>
     </div>
 </body>
 </html>
