--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
         <div class="info-box">
             <strong>ChatGPT/Claude/Gemini で以下 URL にアクセス可能：</strong><br><br>
             <code style="background:#f5f5f5;padding:5px;">https://yuki0717-hub.github.io/shinryouhoshu-download-tool/output/ai-shinryou-db/</code><br><br>
+            <code style="background:#f5f5f5;padding:5px;">https://yuki0717-hub.github.io/shinryouhoshu-download-tool/output/ai-tensuhyo-db/</code><br><br>
             <code style="background:#f5f5f5;padding:5px;">https://yuki0717-hub.github.io/shinryouhoshu-download-tool/output/ai-hourei-db/</code><br><br>
             <code style="background:#f5f5f5;padding:5px;">https://yuki0717-hub.github.io/shinryouhoshu-download-tool/output/ai-chiikyou-db/</code>
         </div>
@@ -146,7 +147,6 @@
     </div>
 
     <script>
-        // 最終更新日を動的に取得
         document.getElementById('lastUpdate').textContent = new Date().toISOString().split('T')[0];
     </script>
 </body>
